--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
 
+
+    <string name="google_maps_api_key">AIzaSyBWeZBSCuQp-yWA_99X-Y8YAyoRzq3OCmk</string>
 </resources>
